--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,8 @@
   "main": "src/index.js",
   "dependencies": {
     "@apollo/client": "^3.5.10",
+    "@headlessui/react": "^1.5.0",
+    "@heroicons/react": "^1.0.6",
     "graphql": "^16.3.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
@@ -17,6 +19,7 @@
   },
   "devDependencies": {
     "@babel/runtime": "7.13.8",
+    "tailwindcss": "^3.0.23",
     "typescript": "4.1.3"
   },
   "scripts": {
