--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
   "keywords": [],
   "dependencies": {
     "apollo-server": "^3.3.0",
+    "express": "^4.17.3",
     "graphql": "^15.5.3",
     "graphql-tag": "2.12.6",
+    "path": "^0.12.7",
     "sequelize": "6.17.0",
     "sequelize-cli": "6.4.1",
     "sqlite3": "5.0.2"
